--- a/bb-interview-api/package.json
+++ b/bb-interview-api/package.json
@@ -5,10 +5,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/register": "^7.16.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "babel": "^6.23.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
@@ -19,7 +16,12 @@
   },
   "devDependencies": {
     "mocha-junit-reporter": "^2.0.2",
-    "mochawesome": "^7.0.1"
+    "mochawesome": "^7.0.1",
+    "@babel/preset-stage-2": "7.8.3",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/register": "^7.16.0"
   },
   "scripts": {
     "start": "SET NODE_ENV=dev && node server.js",
